add legalcategory and categories to structure details
