# src/openapi/schemas/structures/structure.yml
@@ -1,7 +1,7 @@
 title: Structure
 description: Representation of a structure
 readOnly: true
-allOf: 
+allOf:
   - type: object
     properties:
       id:
@@ -68,4 +68,8 @@ allOf:
       population:
         type: integer
         nullable: true
+      categories:
+        type: array
+      legalcategory:
+        type: object
   - $ref: '../../api.yml#/components/schemas/Metas'
